@@ -19,7 +19,7 @@ getPar0 <- function(model, ...) {
 #' regression on the mean of circular distributions ('vm' and 'wrpcauchy') for turning angles are to be used in the new model.  See \code{\link{fitHMM}}. Default: \code{circularAngleMean=model$conditions$circularAngleMean}
 #' @param formula Regression formula for the transition probability covariates of the new model (see \code{\link{fitHMM}}).  Default: \code{formula=model$conditions$formula}.
 #' @param formulaDelta Regression formula for the initial distribution covariates of the new model (see \code{\link{fitHMM}}).  Default: \code{formulaDelta=model$conditions$formulaDelta}.
-#' @param stationary FALSE if there are covariates in formula or formulaDelta. If TRUE, the initial distribution is considered equal to the stationary distribution. Default: FALSE.
+#' @param stationary \code{FALSE} if there are covariates in \code{formula} (other than `\code{ID}') or \code{formulaDelta}. If \code{TRUE}, the initial distribution is considered equal to the stationary distribution. Default: \code{FALSE}.
 #' @param mixtures Number of mixtures for the state transition probabilities  (see \code{\link{fitHMM}}). Default: \code{formula=model$conditions$mixtures}.
 #' @param formulaPi Regression formula for the mixture distribution probabilities (see \code{\link{fitHMM}}). Default: \code{formula=model$conditions$formulaPi}. 
 #' @param DM Named list indicating the design matrices to be used for the probability distribution parameters of each data stream in the new model (see \code{\link{fitHMM}}). Only parameters with design matrix column names that match those in model$conditions$fullDM are extracted, so care must be taken in naming columns if any elements of \code{DM}
@@ -238,8 +238,7 @@ getPar0.default <- function(model,nbStates=length(model$stateNames),estAngleMean
     }
     betaNames <- colnames(model.matrix(newformula,model$data))
     
-    if((length(betaNames)-1) | (ncol(model.matrix(formDelta,model$data))-1)) stationary <- FALSE
-    else if(is.null(stationary)) stationary <- model$conditions$stationary
+    if(((length(betaNames)-1) | (ncol(model.matrix(formDelta,model$data))-1)) & !(all(attr(terms.formula(newformula),"term.labels") %in% "ID") & stationary)) stationary <- FALSE
     
     betaNames <- paste0(rep(betaNames,mixtures),"_mix",rep(1:mixtures,each=length(betaNames)))
     
